fixed alignment and spacing on sharing

--- a/app/sass/new_entry.sass
+++ b/app/sass/new_entry.sass
@@ -111,13 +111,12 @@
       .sharingWrap
         +right
         +relative
-        width: 206px
+        width: 200px
         margin: 8px 0 0 8px
         .sharing
           +absolute
           +round(8)
           +pointer
-          width: 200px
           min-height: 34px
           line-height: 34px
           margin: 0
@@ -134,13 +133,14 @@
             +pointer
             +right
             +transparent
+            +center
             border: none
-            margin-left: 8px
             height: 34px
             line-height: 34px
             padding: 7px 8px
             option
               padding: 8px 4px 8px 38px
+              text-align: left
             option.everyone
               background: url(/images/icons/everyone-16.png) no-repeat 8px center
             option.list
@@ -244,7 +244,7 @@
       width: 64px
       height: 36px
       line-height: 28px
-      margin-right: 8px
+      margin: 8px 8px 0 0
       +save(14)
 
   // ENTRY DATE / TIME
